# logit

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt
examples/HelloWorld/: CMakeLists.txt  Main.cpp
include/LogIt/: Logger.h
